--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "tailwind": "^4.0.0"
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.4",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15"
   }
 }
